# vespe

./: .gitignore  Cargo.toml  README.md  commit_message.txt  ha  package-lock.json
.ctx/contexts/: 2025_10_07.md  2025_10_07_vscode.md  ast.md  ctx.md  do_look_for_polish.md  exe_refactor.md  go_on.md  ideas.md  inline_refactor.md  multiagent.md  mvp.md  poem.md  polish_2025_02_10.md  project.md  prompt.md  rules.md  summary.md  test_context.md  test_inline.md  todo.md  v2_ast.md  v2_visitors.md  v3_ast.md  v3_ctx.md  v3_exe.md  v3_summary_test.md  v3_tests.md  v4_exe.md  v4_tests.md  v5_exe.md  v6_exe.md  v7_exe.md  v8_exe.md  watch.md
.ctx/snippets/: go_on.md  my_snippet.sn  sni1.md  test_snippet.sn
.ctx/summaries/: mvp.md.summary  summary.md.summary  watch.md.summary
.old_01/: lib.rs  main.rs  project_root.rs  prompt_templating.rs
.old_01/agent/: agent_manager.rs  agent_trait.rs  models.rs
.old_01/cli/: commands.rs
.old_01/config/: mod.rs  models.rs
.old_01/git/: design.md  integration.md
.old_01/llm/: llm_client.rs  markup_policy.rs  messages.rs  query_formatter.rs
.old_01/refactor/: error.md
.old_01/statistics/: mod.rs  models.rs
.old_01/test/: test.md
.old_01/tools/: mod.rs  tool_registry.rs  tool_trait.rs
.old_04/: temp_init_test.rs
.old_04/doc/: brief_mcp_spec.txt  chat_2025_09_16b.txt  check_ollama_gpu.txt  context_2025_09_16.txt  design_2025_09_16.txt  design_2025_09_16b.txt  design_2025_09_19.txt  design_2025_09_19b.txt  design_2025_09_19g.txt  design_2025_09_19i.txt  design_2025_09_22b.txt  design_2025_09_22d.txt  design_2025_09_22e.txt  design_2025_09_22g.txt  design_2025_09_22h.txt  design_2025_09_23.txt  design_2025_09_23b.txt  design_2025_09_25.txt  design_2025_09_25c.txt  design_2025_09_25d.txt  design_2025_09_25e_agents.txt  design_2025_09_26b.txt  design_2025_09_26c.txt  design_2025_09_26d_scheduler.txt  design_2025_09_29.txt  gemini_sample_01.txt  (+93 more)
.old_06/: test_ctx.rs  test_markdown.rs
.vespe/: .vespe_root  statistics.json
doc/: 2025_10_03_parsing_test.txt  agent_system_prompt_01.hbs  associated_type.txt  blanket_implementation.txt  chat_2025_09_16.txt  chat_2025_09_16b.txt  design_2025_09_19c.txt  design_2025_09_19e.txt  design_2025_09_19h.txt  design_2025_09_22.txt  design_2025_09_22c.txt  design_2025_09_22d.txt  design_2025_09_25b.txt  design_2025_09_25d.txt  design_2025_09_26.txt  design_2025_09_26c.txt  design_2025_09_30.txt  editor_if.txt  interior_mutability.txt  mutability_vs_immutability_tension.txt  normative_mcp_middle_1.txt  normative_mcp_prompt_1.txt  plan_2025_09_16d.txt  plan_2025_09_16g.txt  plan_2025_09_17d.txt  plan_2025_09_17h.txt  plan_2025_09_17i.txt  plan_2025_09_17k.txt  plan_2025_09_17l.txt  plan_2025_09_17n_01_phase0_policy_types.txt  plan_2025_09_17n_06_phase1_update_various_format_tool_output.txt  plan_2025_09_18.txt  plan_2025_09_18b.txt  plan_2025_09_18e.txt  plan_2025_09_18f.txt  plan_2025_09_18h.txt  plan_2025_09_18j.txt  plan_2025_09_19.txt  plan_2025_09_19c.txt  plan_2025_09_21.txt  (+28 more)
docs/: installation.md
project/: Cargo.toml
sandbox/: test.txt  test2.txt
src/: agent.rs  agent_api.rs  agent_protocol.rs  agent_protocol_mcp.rs  api.rs  constants.rs  decorator.rs  error.rs  file.rs  genai_wrapper.rs  git.rs  injector.rs  lib.rs  llm_client.rs  logging.rs  main.rs  memory.rs  models.rs  path.rs  project.rs  project_models.rs  project_root.rs  prompt_templating.rs  registry.rs  task.rs  tool.rs  tool_models.rs  utils.rs
vespe/: Cargo.toml
vespe-api-server/: Cargo.toml
vespe-api-server/src/: error.rs  handlers.rs  main.rs  models.rs
vespe-buzz/: Cargo.toml
vespe-cli/: Cargo.toml
vespe-cli/src/: main.rs
vespe-cli/src/cli/: commands.rs  mod.rs  resolve.rs
vespe-project/: Cargo.toml
vespe-tui/: Cargo.toml
(+2111 files in other folders)
