#[workspace]
#members = [
#    "vespe-cli",
#    "vespe-tui",
#]

[package]
name = "vespe"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
markdown = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
git2 = "0.20"

#gix = {  version = "0.73", features = ["index", "status"] }
tempfile = "3.10.0"

#rand = "0.8"
#toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
notify = "6"
ctrlc = "3.2"
ansi_term = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
#async-trait = "0.1"
#genai = "0.4.0"
chrono = "0.4"
handlebars = "5.1.0"
#tracing-appender = "0.2"
regex = "1.10.0"
sha2 = "0.10"
portable-pty = "0.9.0"


[[bin]]
name = "ctx"
path = "src/bin/ctx/main.rs"

[[bin]]
name = "vtty_test"
path = "src/bin/vtty_test.rs"

[dev-dependencies]
sha2 = "0.10"
walkdir = "2.3"
#oauth2 = { version = "5.0", features = ["reqwest"] }
#tiny_http = "0.12"
#webbrowser = "1.0"
#url = "2.5" 