[package]
name = "vespe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
notify = "6"
ctrlc = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
handlebars = "5.1.0"
regex = "1.10.0"
sha2 = "0.10"

[[bin]]
name = "ctx"
path = "src/bin/ctx/main.rs"
