[package]
name = "vespe"
version = "0.1.2"
edition = "2021"
description = "Text as a Canvas for LLM Collaboration and Automation"
repository = "https://github.com/thepyper/vespe.git"
categories = ["development-tools", "text-processing"]
keywords = ["llm", "cli", "automation", "prompt-engineering", "context-engineering"]
license-file = "LICENSE-AGPL3.md"
readme = "README.md"

exclude = [
    "extensions/*",
    "examples/*",
    "doc/*",
    ".vespe/*",
    ".gitignore",
    ".gitattributes",
]


[dependencies]
anyhow = "1"
thiserror = "2"     
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
notify = "8"   #"6"
ctrlc = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
handlebars = "6"   
regex = "1.10.0"
sha2 = "0.10"

[[bin]]
name = "vespe"
path = "src/bin/vespe/main.rs"
